--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   color-scheme: dark;
 }
 
+.vertical-timeline-element{
+  box-shadow: "#d8f9ff"
+}
+
 .hash-span {
   margin-top: -100px;
   padding-bottom: 100px;
